samples/_failures_safe/1761296442_37da6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a267f80.c: In function ‘parser_current_token’:
./samples/SAFE/__tmp_6a267f80.c:175:15: error: ‘struct Parser’ has no member named ‘current’
  175 |     if (parser->current
      |               ^~
./samples/SAFE/__tmp_6a267f80.c:175:24: error: expected ‘)’ at end of input
  175 |     if (parser->current
      |        ~               ^
      |                        )
./samples/SAFE/__tmp_6a267f80.c:175:5: error: expected declaration or statement at end of input
  175 |     if (parser->current
      |     ^~
